--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@phosphor-icons/react": "^2.1.7",
     "autoprefixer": "^10.4.19",
     "gatsby": "^5.13.5",
+    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-postcss": "^6.13.1",
     "postcss": "^8.4.40",
     "react": "^18.2.0",
